<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_app">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/buttonexplanation"
            android:layout_weight="1" android:singleLine="false" android:gravity="center"
            android:textIsSelectable="false" android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/buttontext" />

        </LinearLayout>

        <Space android:layout_width="wrap_content" android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonsmall"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smallbutontext"
                android:gravity="right" />

        </LinearLayout>

        <Space android:layout_width="wrap_content" android:layout_height="10dp" />

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/linearLayout">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton" android:src="@android:drawable/sym_def_app_icon"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_gravity="center" android:gravity="right" android:text="@string/imagebuttontext"/>
        </LinearLayout>
        <Space android:layout_width="wrap_content" android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/sym_def_app_icon" style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="@string/imagebutton2text" />

        </LinearLayout>

        <Space android:layout_width="wrap_content" android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttontextimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/sym_def_app_icon"
                android:text="@string/button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="@string/imagetextbutton" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>